src/core/Claroline/CoreBundle/Tests/stub/plugin/extension/Invalid/UnexpectedRoutingPrefix3/InvalidUnexpectedRoutingPrefix3.php
<?php

namespace Invalid\UnexpectedRoutingPrefix3;

use Claroline\CoreBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedRoutingPrefix3 extends ClarolineExtension
{
    public function getRoutingPrefix()
    {
        return "\rInvalid\trouting\n prefix";
    }
}